--- a/client/src/components/Chat/ChatForm.css
+++ b/client/src/components/Chat/ChatForm.css
@@ -1,6 +1,56 @@
-.chat-body .message-container {
+/* .chat-body .message-container {
   width: 750px;
   height: 750px;
   overflow-y: scroll;
   overflow-x: hidden;
+} */
+
+.chat-container {
+  width: 750px;
+  margin: auto;
+  color: white;
+  margin-top: 50px;
+  font-family: "Roboto";
+  font-size: 24px;
+}
+
+.chat-header {
+  width: 100%;
+  background-color: #163446;
+  border: 2px solid white;
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 40px;
+  height: auto;
+  margin: 15px 15px 15px 25px;
+}
+
+p {
+  margin: 0;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.leave-room {
+    border: none;
+    background-color: #1E485F;
+    border-radius: 10px;
+    color: white;
+    margin: 15px;
+    padding: 5px 25px;
+    font-size: 16px;
+}
+
+.chat-main {
+  width:100%;
+  height: 750px;
+  background-color: #1E485F;
+  border: 2px solid white;
+  border-top: none;
+  display: flex;
 }
