--- a/client/src/components/Chat/ChatForm.css
+++ b/client/src/components/Chat/ChatForm.css
@@ -1,12 +1,6 @@
-/* .chat-body .message-container {
-  width: 750px;
-  height: 750px;
-  overflow-y: scroll;
-  overflow-x: hidden;
-} */
 
 .chat-container {
-  width: 750px;
+  max-width: 800px;
   margin: auto;
   color: white;
   margin-top: 50px;
@@ -48,9 +42,13 @@ p {
 
 .chat-main {
   width:100%;
-  height: 750px;
+  height: 700px;
   background-color: #1E485F;
   border: 2px solid white;
   border-top: none;
   display: flex;
+  align-items: space-around;
 }
+
+
+
