--- a/client/src/components/RoomInfo/RoomInfo.css
+++ b/client/src/components/RoomInfo/RoomInfo.css
@@ -41,7 +41,7 @@
     padding: 10px 15px;
     margin: 5px;
     border-radius: 10px;
-    font-size: 16px;;
+    font-size: 16px;
 }
 
 .person-icon {
