--- a/client/src/components/Chat/ChatForm.css
+++ b/client/src/components/Chat/ChatForm.css
@@ -25,7 +25,6 @@
 
 p {
   margin: 0;
-  display: flex;
   justify-content: left;
   align-items: center;
 }
@@ -37,16 +36,20 @@ p {
     color: white;
     margin: 15px;
     padding: 5px 25px;
-    font-size: 16px;
+    font-size: 0.7em;
+}
+
+.leave-room:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .chat-main {
   width:100%;
-  height: 700px;
+  height: 650px;
   background-color: #1E485F;
-  border: 2px solid white;
-  border-top: none;
-  border-bottom: none;
+  border-left: 2px solid white;
+  border-right: 2px solid white;
   display: flex;
   align-items: space-around;
 }
@@ -58,4 +61,17 @@ p {
   border-top: none;
 }
 
+@media (max-width:500px) {
+  .chat-container {
+    max-width: 400px;
+    font-size: 20px;
+    margin-top: 10px;
+  }
 
+  .chat-main {
+    flex-direction: column;
+    align-items:initial;
+    height: 500px;
+  }
+
+}
