--- a/client/src/components/JoinForm/JoinForm.css
+++ b/client/src/components/JoinForm/JoinForm.css
@@ -1,5 +1,5 @@
 .join-container {
-  width: 500px;
+  max-width: 400px;
   margin: auto;
   color: white;
   margin-top: 50px;
@@ -29,16 +29,6 @@ p {
   align-items: center;
 }
 
-/* .leave-room {
-    border: none;
-    background-color: #1E485F;
-    border-radius: 10px;
-    color: white;
-    margin: 15px;
-    padding: 5px 25px;
-    font-size: 16px;
-} */
-
 .form-container {
   width: 100%;
   background-color: #1e485f;
@@ -59,7 +49,7 @@ p {
 .join-form input {
   display: inline-block;
   flex: 1;
-  width: 350px;
+  width: 80%;
   background-color: #899aaa;
   font-size: 16px;
   border: none;
