--- a/client/src/components/Message/Message.css
+++ b/client/src/components/Message/Message.css
@@ -2,12 +2,12 @@
   background-color: #c7daf0;
   border-radius: 10px;
   width: 70%;
-  margin: 10px;
+  margin: 0.75em;
   padding: 5px;
 }
 
 .message-author {
-  font-size: 1.2rem;
+  font-size: 0.8em;
   color: #1e485f;
   font-weight: bold;
   padding: 5px;
@@ -15,13 +15,13 @@
 
 .message-content {
   color: #000000;
-  font-size: 1.2rem;
+  font-size: 0.8em;
   padding: 5px;
 }
 
 .message-time {
   color: #000000;
-  font-size: 0.8rem;
+  font-size: 0.5em;
   justify-content: right;
   padding-right: 10px;
 }
@@ -44,7 +44,7 @@
 }
 
 .admin {
-  width: 70%;
+  width: 90%;
   align-self: center;
   background-color: #adacac;
   border-radius: 10px;
