--- a/client/src/components/RoomInfo/RoomInfo.css
+++ b/client/src/components/RoomInfo/RoomInfo.css
@@ -1,49 +1,103 @@
 .room-data {
-    width: 20%;
-    display: flex;
-    margin: 2%;
-    flex-direction: column;
-    font-size: 20px;
+  flex: 1;
+  display: flex;
+  margin: 2%;
+  margin-right: 0;
+  flex-direction: column;
+  font-size: 0.8em;
+}
+
+.users-count {
+  display: none;
 }
 
 .room-name {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 1.2em;
 }
 
 .room-name div:nth-child(1),
 .users-name {
-    width: 100px;
-    display: flex;
-    justify-content: space-around;
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
 }
 
 .room-name div:nth-child(2) {
-    background-color: #163446;
-    padding: 10px 5px;
-    margin: 5px;
-    border-radius: 10px;
-    text-align: center;
+  background-color: #163446;
+  padding: 10px 5px;
+  margin: 5px;
+  border-radius: 10px;
+  text-align: center;
 }
 
 .users-container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .users-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    background-color: #163446;
-    padding: 10px 15px;
-    margin: 5px;
-    border-radius: 10px;
-    font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  background-color: #163446;
+  padding: 10px 15px;
+  margin: 5px;
+  border-radius: 10px;
+  font-size: 16px;
 }
 
 .person-icon {
-    margin-right: 5px;
+  margin-right: 5px;
+}
+
+@media (max-width: 500px) {
+  .room-data {
+    margin: 2%;
+    flex: 0.4;
+  }
+
+  .room-name {
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 0;
+    margin-bottom: 5px;
+  }
+  .room-name div:nth-child(1) {
+    width: 20%;
+    align-items: center;
+  }
+
+  .room-name div:nth-child(2) {
+      padding: 5px 10px;
+      margin: 0;
+  }
+
+  .users {
+    display: flex;
+  }
+
+  .users > div,
+  .room-name > div {
+      margin-right: 5%;
+  }
+
+  .users-name {
+    width: 20%;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .users-count {
+    display: block;
+    background-color: #163446;
+    padding: 5px 10px;
+    border-radius: 10px;
+  }
+
+  .users-container {
+    display: none;
+  }
 }
