--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,21 @@
 
 body {
     margin: 0;
-    background-color: black;
+    background-color: rgb(51, 51, 51);
     color: #ffffff;
     font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
